fix iterations index overflow

--- a/public/stylesheets/application/layout.css
+++ b/public/stylesheets/application/layout.css
@@ -102,7 +102,8 @@ body#projects_show #iterations { min-width:250px }
 
 /* iterations/index */
 body#iterations_index .active,
-body#iterations_finished .finished { padding:45px 30px 30px 30px }
+body#iterations_finished .finished { padding:45px 30px 30px 30px;
+                                     overflow:hidden }
 /* end iterations/index */
 
 /* stories/show */
